[package]
name = "libsignal-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
libsignal-protocol = { path = "../protocol" }
pswoosh = { path = "../pswoosh" }
rand = "0.9"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "communication"
path = "src/communication.rs"

[[bin]]
name = "communication_no_pq"
path = "src/communication_no_pq.rs"

[[bin]]
name = "communication_swoosh"
path = "src/communication_swoosh.rs"

[[bin]]
name = "async_swoosh_communication"
path = "src/async_swoosh_communication.rs"